Promises in AngularJS

--- a/promises.html
+++ b/promises.html
@@ -3,7 +3,7 @@
 	=========
 
 	Promises in AngularJS are provided by the built-in $q service.
-	Ways to execute async functions in series by regitering them with a promise object.
+	Ways to execute async functions in series by registering them with a promise object.
 
 
 	Deferred Object:
