changes to index.html

--- a/3 Services/index.html
+++ b/3 Services/index.html
@@ -1,6 +1,11 @@
 <!-- Services are used to share data and functionality throughout our app
 
 	Loaded when needed.
+
+  Dependency Injection:
+  ---------------------
+
+          Giving a function an object rather than creating an object inside the function.
 -->
 
 <!DOCTYPE html>
